<resources>
    <string name="app_name">DistanceCalc</string>
    <string name="text_view1">Enter First Coordinate</string>
    <string name="text_view2">Enter Second Coordinate</string>
    <string name="button1">Go</string>
    <string name="driv_text_view1">Geographical Distance</string>
    <string name="driv_text_view2">Driving Distance</string>
    <string name="try_again">Try Again</string>
    <string name="hint_lat">lat</string>
    <string name="hint_long">long</string>
    <string name="apikey">AIzaSyCOAgCY8CE43jFXVCqhpTLPiMu5k4CtvTg</string>
    <string name="base_url">"https://maps.googleapis.com/maps/api/distancematrix/"</string>
</resources>
