<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abdulmuqeethmohammed.distancecalc.DistanceActivity">

    <LinearLayout
        android:id="@+id/distRow1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="@string/driv_text_view1" />

        <TextView
            android:id="@+id/eucDistVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/distRow2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/driv_text_view2" />

        <TextView
            android:id="@+id/drivDistVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/distRow3"
        android:layout_width="match_parent"
        android:layout_height="48sp">

        <Button
            android:id="@+id/tryAgainButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/try_again"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


</LinearLayout>
